Wed Aug 14 16:01:41 2002  George Lebl <jirka@5z.com>

	* gui/greeter/Makfile.am, gui/greeter/gdmthemetester: a script to
	  run gdmgreeter in Xnest to test themes in the various environments

	* gui/greeter/greeter_item_capslock.c: if GDM_PARENT_DISPLAY is set
	  then use it to get capslock state.  Currently only used in
	  gdmthemetester as we have to figure out how to do this inside
	  the daemon with the cookies and all that.

	* gui/gdmXnestchooser.c: close the 0,1,2 descriptors so that we may
	  do things such as `gdmXnest -b`

Wed Aug 14 12:16:30 2002  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: whack old debug printf (it wasn't harmful due to
	  the way we do things, but still it was evil)

	* gui/gdmlogin.c, gui/greeter/greeter.c,
	  gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_item_pam.c:
	  Do the focus stuff correctly instead of trapping tab and all that,
	  unset CAN_FOCUS on widgets other then the entry.  Make sure that
	  an entry exists in the graphical greeter.  Add a fake menubar
	  below the entry in the graphical greeter so that we always can get
	  to all the commands even on a whacked out theme.  Plus it may be
	  nicer to use then the mnemonics if you just use F10.  Now the whole
	  thing should be more accessibility friendly as well.  When
	  'doing_development' make the entry sensitive.  Must make a
	  theme tester.

Tue Aug 13 17:05:55 2002  George Lebl <jirka@5z.com>

	* daemon/slave.[ch], daemon/gdm.[ch], daemon/misc.[ch],
	  daemon/server.c, daemon/errorgui.c, daemon/display.c:
	  Sure fire way to open /dev/null and give error when system
	  on crack.  Also clean up processes properly on gdm_fail
	  and don't use the buffered stderr.

	* config/Makefile.am: if the user is using the default config
	  (gdm.conf is the same as the factory-gdm.conf) then just overwrite
	  gdm.conf with the new one in the installation.

Tue Aug 13 16:15:08 2002  George Lebl <jirka@5z.com>
