@@ -13,9 +13,6 @@ TODO things (some must wait until 2.1):
   - in slave child handler check that the server dead stuff can actually wipe
     cookies (it needs to have the uid of the user) (probably so)
 
-Set GDM_PARENT_DISPLAY properly for Xnest flexiservers, but we must make sure
-cookies are all fine
-
 Languages should be read from available locales.  Look at source  for
 locale_config.  Currently the way we do things is utter shit.
 
