@@ -84,7 +84,7 @@ StandardXServer=/usr/X11R6/bin/X
 # The maximum number of flexible X servers to run.
 FlexibleXServers=5
 # the X nest command
-Xnest=/usr/X11R6/bin/Xnest -name Xnest -kb
+Xnest=/usr/X11R6/bin/Xnest -name Xnest
 
 [security]
 # If any distributions ship with this one off, they should be shot
